--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,32 @@
-// app global css in SCSS form
+.container {
+    &-input {
+        background-color: white;
+        border: 1px solid #ccc;
+        border-radius: 15px;
+        width: 50%;
+        padding: 10px;
+        min-width: 900px;
+    } 
+    &-output {
+        background-color: white;
+        min-width: 900px;
+        border: 1px solid #ccc;
+        border-radius: 15px;
+        width: 50%;
+        margin-top: 10px;
+        padding: 10px;
+    }
+    .q-input, .q-select, .output-tables {
+        margin-bottom:10px;
+    }
+    h1 {
+        font-size: 26px;
+    }
+    h2 {
+        font-size: 19px;
+        line-height: normal;
+    }
+}
+body {
+    background-color: #f0f0f0;
+}
